Add query date for original Uniprot query

--- a/manuscript/ms.tex
+++ b/manuscript/ms.tex
@@ -145,7 +145,7 @@ All code and source files used in this project can be found at \url{https://gith
 
 \subsubsection{Selection of human protein kinase domain targets}
 
-Human protein kinases were selected by querying the UniProt API for any human protein with a domain containing the string "protein kinase", and which was manually annotated and reviewed (i.e. a Swiss-Prot entry).
+Human protein kinases were selected by querying the UniProt API (query date 30 May 2014) for any human protein with a domain containing the string "protein kinase", and which was manually annotated and reviewed (i.e. a Swiss-Prot entry).
 The query string used was:\\
 {\tt taxonomy:"Homo sapiens (Human) [9606]" AND domain:"protein kinase" AND reviewed:yes}\\
 Data was returned by the UniProt API in XML format and contained protein sequences and relevant PDB structures, along with many other types of genomic and functional information.
